API: TIDYUP of conf-dist.ini.

--- a/tests/api/conf-dist.ini
+++ b/tests/api/conf-dist.ini
@@ -33,7 +33,7 @@ nonexistent_password = randompassword
 ; Super admins can do anything.
 ; Includes: changing doctypes and config settings.
 superadmin_username = catadmin
-superadmin_password = "(SOZ)2Long"
+superadmin_password = "admin"
 
 ; Admins can add/remove people from groups and other user management
 ; operations.
